--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.31.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
