--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "framer-motion": "^12.31.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.2.0",
+    "react-snowfall": "^2.4.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
